...
  <string name="title_item_list">Notes</string>
  <string name="add_note">Add Note</string>
  <string name="title">Title</string>
  <string name="title_activity_list">Omni Notes</string>
  <string name="search">Search</string>
  <string name="search_hint">Search in notes</string>
  <string name="content">Content</string>
  <string name="save">Save</string>
  <string name="share">Share</string>
  <string name="undo">Undo</string>
...
  <string name="delete_note_confirmation">Confirm note deletion?</string>
  <string name="confirm">Confirm</string>
  <string name="ok">Ok</string>
  <string name="no">No</string>
  <string name="failed">failed</string>
...
  <string name="add_reminder">Add reminder</string>
  <string name="location_not_found">Location not found</string>
  <string name="record">Record</string>
  <string name="stop">Stop</string>
  <string name="no_app_to_handle_intent">No applications to handle file</string>
...
  <string name="categories">Categories</string>
  <string name="edit_tag">Edit category</string>
  <string name="add_category">Add category</string>
  <string name="category_title">Title</string>
  <string name="category_description">Description</string>
  <string name="category_color">Color</string>
...
  <string name="category_missing_title">Category title missing</string>
  <string name="delete_this_category">Delete this category</string>
  <string name="category">Category</string>
  <string name="categorize_as">Categorize as</string>
  <string name="title_activity_category">Edit category</string>
...
  <string name="empty_trash_confirmation">Confirm deleting all trashed notes?</string>
  <string name="help">Help</string>
  <string name="online_manual">Online manual</string>
  <string name="tags_added">Tags added</string>
  <string name="working">Working...</string>
...
  <string name="photo">Photo</string>
  <string name="uncompleted_checklists">Incompleted checklists</string>
  <string name="info">Info</string>
  <string name="completed">Completed</string>
  <string name="undo_changes_note_confirmation">Confirm undoing changes?</string>
  <string name="done">Done</string>
  <string name="nothing_selected">Nothing selected</string>

  <!-- Settings -->
  <string name="dashclock_description">Displays some statistics and expiring reminders from Omni Notes</string>
  <string name="settings">Settings</string>
  <string name="settings_about">Info</string>
  <string name="settings_category_other">Other</string>
...
  <string name="settings_category_gestures">Gestures</string>
  <string name="settings_enable_swype">Enable swype</string>
  <string name="settings_screen_interface">Interface</string>
  <string name="settings_enable_animations">Animations</string>
  <string name="settings_screen_backup">Backup</string>
  <string name="settings_screen_notifications">Notifications</string>
  <string name="settings_enable_vibration">Vibration</string>
  <string name="settings_notification_enable_boot_persistence">Enable notifications persistence</string>
  <string name="settings_notification_enable_boot_persistence_summary">Allow the app to access notifications to make they survive to reboots</string>
  <string name="settings_screen_navigation">Navigation</string>
  <string name="settings_changelog">Changelog</string>
  <string name="settings_enable_editor_links">Links recognition</string>
  <string name="settings_max_video_size">Video attachments</string>
  <string name="settings_screen_data">Data</string>
  <string name="settings_backup">Backup</string>
  <string name="settings_enable_automatic_backup">Enable automatic backup</string>
...
  <string name="settings_category_beta">Beta</string>
  <string name="settings_category_about">About</string>
  <string name="settings_beta">Opt-In</string>
  <string name="settings_beta_summary">Subscribe to the beta program to keep up to date with the latest features</string>
  <string name="donate">Donate</string>
...
  <string name="settings_simple_calendar_summary">Use the (simpler) Android interface for date/time selection, instead of Google interface</string>
  <string name="settings_first_day_of_week">First day of week</string>
  <string name="settings_tour_show_again">App tour</string>
  <string name="settings_tour_show_again_summary">Show me the application tour again</string>
  <string name="backup_include_settings">Include settings and password</string>
...
  <string name="settings_navdrawer_on_exit_summary">Pressing \"back\" when in notes list opens navigation menu instead of exiting</string>
  <string name="settings_text_size">Text size</string>
  <string name="settings_screen_behaviors">Behaviors</string>
  <string name="settings_enable_swipe">Swipe notes</string>
  <string name="settings_enable_swipe_summary">Swipe on notes to perform actions</string>
...
  <string name="settings_prettified_dates_summary_on">Dates are shown in a simplier format</string>
  <string name="settings_prettified_dates_summary_off">Dates are shown in a more detailed format</string>
  <string name="settings_screen_privacy">Privacy</string>
  <string name="settings_error_reporting">Error reporting</string>
  <string name="settings_error_reporting_summary_on">When app crashes developer will be informed to help you</string>
...
  <string name="settings_enable_file_logging">Save logs to file</string>
  <string name="settings_enable_file_logging_summary">The logs of the apps will be saved into a file that you\'ll be able to share with the developer to investigate possible problems (restart required)</string>
  <string name="settings_statistics">Statistics</string>

  <!-- Stats -->
...
