...
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/attachment_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_popup"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
...
            android:padding="8dp"
            android:text="@string/files"
            android:textSize="17sp"
            pixlui:typeface="Roboto-Regular.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:drawableLeft="@drawable/ic_action_mic"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
...
